2007-11-06  Johan Dahlin  <johan@gnome.org>

	* gobject/option.py (OptionParser.parse_args): Merge in values
	from all groups to the global option group. Slice up args
	so it doesn't return too much.

	* tests/test_option.py: Refactor to be unittesty,
	Add new tests to test what options returns.

2007-11-05  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.h: 
	* gobject/gobjectmodule.c: 
	Add pyg_option_group_new to the public API

	* configure.ac: Branch, bump version to 2.15.0.

2007-10-16  Damien Carbery   <damien.carbery@sun.com>

	reviewed by: Johan Dahlin.

	* pygobject-2.0-uninstalled.pc.in: uninstalled.pc file missing
	'datadir' value. Fixes #486876.
    
2007-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-relase version bump.

=== 2.14.0 ===
2007-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Bump version to 2.14.0.

	* NEWS: Update NEWS for next release.

2007-09-06  John Finlay  <finlay@moeraki.com>

	* docs/xsl/fixxref.py.in: Remove DATADIR substitution since it now
	gets substituted as ${prefix}/share which doesn't work in a Python
	script.

2007-08-27  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/propertyhelper.py (property.__metaclass__.__repr__): Avoid
	exporting the metaclass, just define it in the class.

	* gobject/__init__.py (GObjectMeta._install_properties): 
	Refactor a bit to make sure that it is possible to use in subclasses,
	fixes #470718 (Marco Giusti)

2007-08-27   Marco Giusti  <marco.giusti@gmail.com>

	reviewed by: Gustavo J. A. M. Carneiro

	* gobject/propertyhelper.py:
	* tests/test_properties.py:
	Bug 470230 – check for default value in boolean type is wrong.

2007-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/Makefile.am,
	* gobject/Makefile.am: Remove -D_XOPEN_SOURCE=600
	-D__EXTENSIONS__, no longer needed.

	* configure.ac: Don't add -std=c9x CFLAG on Solaris.  Fixes
	#339924 again.

	* gobject/pygtype.c (pyg_type_wrapper_repr): Typecast self->type