@@ -1,3 +1,9 @@
+2007-11-12  Johan Dahlin  <johan@gnome.org>
+
+	* gobject/option.py (OptionParser.parse_args): 
+	Set the default value of old_args to 0, so we don't end
+	up slicing with None. Fixes #496278 (Vincent Untz)
+
 2007-11-06  Johan Dahlin  <johan@gnome.org>
 
 	* gobject/option.py (OptionParser.parse_args): Merge in values
